<resources>


    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="navigation_drawer_items_array">
        <item>Connect</item>
        <item>Fixtures</item>
        <item>Coaster</item>
        <item>FriendsList</item>
        <item>Coaster</item>
        <item>Coaster</item>
        <item>Coaster</item>
        <item>Coaster</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

    <string name="app_name">Coaster</string>
    <string name="gin">Gin</string>
    <string name="rum">Rum</string>
    <string name="tequila">Tequila</string>
    <string name="vodka">Vodka</string>
    <string name="whiskey">Whiskey</string>
    <string name="Mixed">Mixed</string>
    <string name="preparation">Preparation</string>
    <string name="ingredients">Ingredients</string>
    <string name="description">Description</string>
    <string name="instruction">Instruction</string>
    <string name="my_cocktail_recipes">My Cocktail Recipes</string>
    <string name="bloody_mary">Bloody Mary</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="pink">Pink</string>
    <string name="grey">Grey</string>
    <string name="original">Original</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="signout">Sign Out</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="customDrink_invitation_title">Custom Drinks List</string>
    <string name="customDrink_invitation_deep_link">https://c34mu.app.goo.gl/pGuk</string>
    <string name="customDrink_message">Check out my very own drink recipes!: </string>

    <string name="invite_a_friend">Invite a Friend</string>
    <string name="invitation_message">Checkout Coaster</string>
    <string name="invitation_title">Send Invitation</string>
    <string name="invitation_deep_link">https://github.com/ahong211/coaster</string>
    <!--<string name="invitation_custom_image">https://github.com/ahong211/coaster/blob/master/app/src/main/res/mipmap-hdpi/coaster_icon_round.png</string>-->
    <string name="invitation_call_to_action">Try this app!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friend_added">Friend Added!</string>
    <string name="invalid_email">Invalid email</string>

</resources>