<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.coaster.android.coaster.CategoryFragment">

    <Button
        android:id="@+id/gin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="20dp"
        android:text="@string/gin" />

    <Button
        android:id="@+id/rum_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="20dp"
        android:text="@string/rum" />

    <Button
        android:id="@+id/tequila_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="20dp"
        android:text="@string/tequila" />

    <Button
        android:id="@+id/vodka_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="20dp"
        android:text="@string/vodka" />

    <Button
        android:id="@+id/whiskey_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="20dp"
        android:text="@string/whiskey" />

</LinearLayout>